fixed chat overflow

--- a/all/chatbot/static/style.css
+++ b/all/chatbot/static/style.css
@@ -3,7 +3,7 @@ body {
     background-color: #faf3ea;
     margin: 0;
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
     padding: 0;
     color: #023020;
     box-sizing: border-box;
@@ -140,7 +140,8 @@ input{
 }
 
 .message-area{
-    min-height: 63%;
+    min-height: 20em;
+    max-height: 20em;
     align-items: center;
     border-radius: 2em;
     width: 50em;
@@ -269,10 +270,13 @@ span{
         padding-left: 0.2em;
         margin-left: 0.2em;
     }
+    .input-container{
+        margin-top: 1em;
+    }
     .message-area{
         width: 20em;
         padding: 2.5em;
-        /* height: 25em; */
+        min-height: 25em;
     }
     .chat-container{
         padding: 0 0.5em;
